--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
   "dependencies": {
     "@fontsource/roboto": "5.2.5",
     "@mdi/font": "7.4.47",
+    "@tiptap/extension-underline": "^2.14.0",
+    "@tiptap/starter-kit": "^2.14.0",
+    "@tiptap/vue-3": "^2.14.0",
+    "@vueup/vue-quill": "^1.2.0",
+    "axios": "^1.9.0",
+    "quill": "^2.0.3",
     "vue": "^3.5.13",
     "vuetify": "^3.8.1"
   },
